--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="node_modules/cropperjs/dist/cropper.min.css" rel="stylesheet">
     <script src="node_modules/cropperjs/dist/cropper.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<title>Image Cropper</title>
 </head>
 <body>
-  <div>
-    <img id="image" src="image-to-crop.jpg" onload="cropper();">
-  </div>
+  <!-- <button onclick="getCroppedCanvas()">Get Cropped Image</button> -->
+  <div id="image-container"></div>
+  <div id="canvas-container"></div>
   <script src="js/script.js"></script>
 </body>
 </html>
