--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
   <!-- <a href="" download></a> -->
   <img id="preview" alt="image-clipper preview">
-  <script src="./image-clipper.js"></script>
+  <script src="./imagecropper.js"></script>
   <script src="./parameters.js"></script>
   <script>
     var downloadLink = document.createElement("a");
     document.body.appendChild(downloadLink);
-    downloadLink.download = "./cropped.jpg";
+    downloadLink.download = "cropped.jpg";
     var preview = document.getElementById('preview');
     imageClipper(imgSrc, function() {
         this.crop(x, y, cropWidth, cropHeight)  
