--- a/client-side/index.html
+++ b/client-side/index.html
@@ -8,8 +8,8 @@
 <body>
   <!-- <a href="" download></a> -->
   <img id="preview" alt="image-clipper preview">
-  <script src="./imagecropper.js"></script> // library
-  <script src="./parameters.js"></script> // parameters to use in cropping
+  <script src="./imagecropper.js"></script> 
+  <script src="./parameters.js"></script> 
   <script>
     var downloadLink = document.createElement("a");
     document.body.appendChild(downloadLink);
